--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
   <title>QuranTogether</title>
   <base href="/">
-  <script src="node_modules/es6-shim/es6-shim.js"></script>
-  <script src="node_modules/es5-shim/es5-shim.js"></script>
+  <!--<script src="assets/js/es6-shim.min.js"></script>-->
+  <!--<script src="assets/js/es5-shim.min.js"></script>-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Bootstrap Core CSS -->
@@ -21,5 +21,5 @@
 
 </head>
 <body><app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.a81e8450f56fe37bab40.bundle.js"></script><script type="text/javascript" src="main.453d24968106a92985b6.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.a81e8450f56fe37bab40.bundle.js"></script><script type="text/javascript" src="main.e2a58603e187efa57659.bundle.js"></script></body>
 </html>
