Fixing some bugs in UI

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
   <!-- Custom Fonts -->
   <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
-<body><app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.e59949e79e3829394339.bundle.js"></script><script type="text/javascript" src="main.0cb2579004dbab5ec841.bundle.js"></script></body>
+<app-root>Loading...</app-root>
 </html>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.e59949e79e3829394339.bundle.js"></script><script type="text/javascript" src="main.d77929be37e50d197ede.bundle.js"></script>
