Modify getByShareLink query to be same in select clause as getByEmail query Filter hash used for share link (Just alphabetic characters and numbers are accepted)

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,22 @@
   <!-- Bootstrap Core CSS -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
+  <!--Angular Material Theme-->
+  <link href="assets/css/indigo-pink.css" rel="stylesheet">
+
   <!-- Custom CSS -->
   <link href="assets/css/stylish-portfolio.css" rel="stylesheet">
+
+  <!--Angular Material Icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!--Import moment and moment timezone-->
+  <script src="moment.js"></script>
+  <script src="moment-timezone-with-data.js"></script>
 
   <!-- Custom Fonts -->
   <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <app-root>Loading...</app-root>
 </html>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.a81e8450f56fe37bab40.bundle.js"></script><script type="text/javascript" src="main.0f7179b4fd7e89c52c42.bundle.js"></script>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script>
