--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
   <!-- Custom Fonts -->
   <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-</head>
+<link href="styles.3eca036b43a9c66ac4dd.bundle.css" rel="stylesheet"/></head>
 <app-root>Loading...</app-root>
 </html>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script>
+<script type="text/javascript" src="inline.d400e2bdeb9030a5e701.bundle.js"></script><script type="text/javascript" src="vendor.ea4b5f9c53166fafb5e0.bundle.js"></script><script type="text/javascript" src="main.4b8e3b48fabfb7c10006.bundle.js"></script>
