--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,12 @@
   <!--Angular Material Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!--Import moment and moment timezone-->
-  <script src="moment.js"></script>
-  <script src="moment-timezone-with-data.js"></script>
+  <!--Load clipboard.js file-->
+  <script src="https://cdn.jsdelivr.net/npm/clipboard@1/dist/clipboard.min.js"></script>
 
   <!-- Custom Fonts -->
   <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="styles.3eca036b43a9c66ac4dd.bundle.css" rel="stylesheet"/></head>
+<link href="styles.41d5bcd6629cea82c4ef.bundle.css" rel="stylesheet"/></head>
 <app-root>Loading...</app-root>
 </html>
-<script type="text/javascript" src="inline.bedf90c5f139728b5888.bundle.js"></script><script type="text/javascript" src="vendor.b3541f8b21c00982b49c.bundle.js"></script><script type="text/javascript" src="main.7887a20f2014de5aa5de.bundle.js"></script>
+<script type="text/javascript" src="inline.6efd23f9156a4a41e080.bundle.js"></script><script type="text/javascript" src="vendor.8b59d003f8dd51b32b3f.bundle.js"></script><script type="text/javascript" src="main.a0c516c8c5e084fdf7a0.bundle.js"></script>
